--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -12,10 +12,13 @@ h2{
 
 .texto-naranja{
     color: orange;
+    font-size: 50px;
 }
 
 .texto-verde{
     color: green;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .texto-azul{
