--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -13,6 +13,7 @@ h2{
 .texto-naranja{
     color: orange;
     font-size: 50px;
+    font-family: sans-serif;
 }
 
 .texto-verde{
@@ -23,8 +24,12 @@ h2{
 
 .texto-azul{
     color: blue;
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .texto-morado{
     color: purple;
+    font-size: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
