--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -13,13 +13,13 @@ h2{
 .texto-naranja{
     color: orange;
     font-size: 50px;
-    font-family: sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .texto-verde{
     color: green;
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: fantasy;
 }
 
 .texto-azul{
